# fmeaprediktor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  example_config.ini  generate_api.py  main.py  openapi.json  pyproject.toml  start.sh
fmeaprediktor/: initer.py
fmeaprediktor/connectors/: openai_connector.py
fmeaprediktor/controllers/: prediction_controller.py
fmeaprediktor/entities/: predict.py
fmeaprediktor/util/: get_timestamp_ms.py
