[tool.poetry]
name = "fmeapredictor"
version = "1.0.0"
description = ""
authors = ["skrcka <krcek.adam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
httpx = "^0.27.0"
more-itertools = "^10.2.0"
pydantic = "^2.6.4"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
pre-commit = "^3.6.2"
watchfiles = "^0.21.0"

[tool.pytest.ini_options]
pythonpath = ["fmeaprediktor"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
